--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.css" />
+    <Content Include="Grid\grid.js" />
+    <Content Include="Grid\index.html" />
+    <Content Include="Grid\main.css" />
     <Content Include="index.html" />
     <Content Include="IonLogo.png" />
     <Content Include="web.config" />
@@ -37,6 +40,8 @@
     <TypeScriptCompile Include="Applications\ServerInfo.ts" />
     <TypeScriptCompile Include="Applications\WebServerSessions.ts" />
     <TypeScriptCompile Include="HtmlHelper.ts" />
+    <TypeScriptCompile Include="MenuWindow.ts" />
+    <TypeScriptCompile Include="TaskBar.ts" />
     <TypeScriptCompile Include="WindowSystem.ts" />
   </ItemGroup>
   <ItemGroup>
