Fixed some async thing in request. Added cache service. Added async options in the protocol reader

--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheService.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Http.cs" />
     <Compile Include="HttpServer.cs" />
