Moved grid system, and added not more left

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -39,6 +39,7 @@
     <TypeScriptCompile Include="Applications\LogViewer.ts" />
     <TypeScriptCompile Include="Applications\ServerInfo.ts" />
     <TypeScriptCompile Include="Applications\WebServerSessions.ts" />
+    <TypeScriptCompile Include="Grid\gridsystem.ts" />
     <TypeScriptCompile Include="HtmlHelper.ts" />
     <TypeScriptCompile Include="MenuWindow.ts" />
     <TypeScriptCompile Include="TaskBar.ts" />
