--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CacheService.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Http.cs" />
     <Compile Include="HttpServer.cs" />
     <Compile Include="JSON.cs" />
