--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CacheService.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Data\SensorData.cs" />
     <Compile Include="Http.cs" />
     <Compile Include="HttpServer.cs" />
     <Compile Include="JSON.cs" />
