--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheService.cs" />
+    <Compile Include="ComBus.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Socket.cs" />
     <Compile Include="Controllers\TestController.cs" />
