--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -51,6 +51,7 @@
     <TypeScriptCompile Include="kernel.ts" />
     <TypeScriptCompile Include="MenuWindow.ts" />
     <TypeScriptCompile Include="models.ts" />
+    <TypeScriptCompile Include="PlotData.ts" />
     <TypeScriptCompile Include="Plotter.ts" />
     <TypeScriptCompile Include="sensys.ts" />
     <TypeScriptCompile Include="TaskBar.ts" />
