--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -60,7 +60,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Content\testpdf.pdf" />
+    <None Include="Data\stiangps.gpx" />
     <None Include="Data\126_usart_data.iondata" />
+    <None Include="Data\fredrikgps.gpx" />
     <None Include="Data\GPS_DataFile.csv" />
     <None Include="Data\Sensor.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
