--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -22,10 +22,12 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app-style.css" />
     <Content Include="app.css" />
     <Content Include="Grid\grid.js" />
     <Content Include="Grid\index.html" />
-    <Content Include="Grid\main.css" />
+    <Content Include="Grid\grid-style.css" />
+    <Content Include="Grid\grid.css" />
     <Content Include="index.html" />
     <Content Include="IonLogo.png" />
     <Content Include="web.config" />
