--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -50,15 +50,16 @@
     <TypeScriptCompile Include="comsys.ts" />
     <TypeScriptCompile Include="event.ts" />
     <TypeScriptCompile Include="GoogleChart.ts" />
-    <TypeScriptCompile Include="GPSPlot.ts" />
+    <TypeScriptCompile Include="Controllers\GPSPlot.ts" />
     <TypeScriptCompile Include="Grid\gridsystem.ts" />
     <TypeScriptCompile Include="HtmlHelper.ts" />
     <TypeScriptCompile Include="kernel.ts" />
+    <TypeScriptCompile Include="Controllers\LabelController.ts" />
     <TypeScriptCompile Include="MenuWindow.ts" />
-    <TypeScriptCompile Include="GaugePlot.ts" />
+    <TypeScriptCompile Include="Controllers\GaugePlot.ts" />
     <TypeScriptCompile Include="models.ts" />
     <TypeScriptCompile Include="PlotData.ts" />
-    <TypeScriptCompile Include="Plotter.ts" />
+    <TypeScriptCompile Include="Controllers\Plotter.ts" />
     <TypeScriptCompile Include="sensys.ts" />
     <TypeScriptCompile Include="TaskBar.ts" />
     <TypeScriptCompile Include="AppWindow.ts" />
