--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Content\testpdf.pdf" />
+    <None Include="Data\freq.iondata" />
     <None Include="Data\stiangps.gpx" />
     <None Include="Data\126_usart_data.iondata" />
     <None Include="Data\fredrikgps.gpx" />
