--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -47,27 +47,28 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Socket.cs" />
     <Compile Include="Controllers\TestController.cs" />
-    <Compile Include="Data\SensorData.cs" />
+    <Compile Include="Data\SensorDataReader.cs" />
     <Compile Include="Http.cs" />
     <Compile Include="HttpServer.cs" />
     <Compile Include="JSON.cs" />
     <Compile Include="MvcService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SenSys.cs" />
+    <Compile Include="SenSys\Models.cs" />
+    <Compile Include="SenSys\SensorDataStore.cs" />
     <Compile Include="SessionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Content\testpdf.pdf" />
-    <None Include="Data\freq.iondata" />
+    <None Include="Data\freq.log16" />
     <None Include="Sensors\SensorInfo.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Data\stiangps.gpx" />
-    <None Include="Data\126_usart_data.iondata" />
+    <None Include="Data\Sets\126_usart_data.log16" />
     <None Include="Data\fredrikgps.gpx" />
-    <None Include="Data\GPS_DataFile.csv" />
+    <None Include="Data\GPS_DataFile.gpscsv" />
     <None Include="Sensors\Sensor.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -87,7 +88,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties Sensors_4SensorInfo_1json__JSONSchema="sensorInfoTypeDef.json" Sensors_4Sensor_1json__JSONSchema="sensorTypeDef.json" />
+      <UserProperties Sensors_4Sensor_1json__JSONSchema="sensorTypeDef.json" Sensors_4SensorInfo_1json__JSONSchema="sensorInfoTypeDef.json" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
