--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -10,7 +10,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
-    <TypeScriptToolsVersion>2.1</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.2</TypeScriptToolsVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -25,6 +25,7 @@
     <Content Include="app-style-dark.css" />
     <Content Include="app-style.css" />
     <Content Include="app.css" />
+    <Content Include="arrow.png" />
     <Content Include="Grid\grid.js" />
     <Content Include="Grid\index.html" />
     <Content Include="Grid\grid-style.css" />
@@ -39,6 +40,7 @@
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="application.ts" />
     <TypeScriptCompile Include="Applications\CanDataViewer.ts" />
+    <TypeScriptCompile Include="Applications\DataSourceBuilder.ts" />
     <TypeScriptCompile Include="Applications\DataViewer.ts" />
     <TypeScriptCompile Include="Applications\FileExplorer.ts" />
     <TypeScriptCompile Include="Applications\LogViewer.ts" />
