--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="Content\testpdf.pdf" />
     <None Include="Data\freq.log16" />
     <None Include="Data\Sets\167_usart_data.log16" />
@@ -92,7 +93,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties Sensors_4Data2016_4SensorInfo_1json__JSONSchema="..\TypeDef\sensorInfoTypeDef.json" Sensors_4Data2016_4Sensor_1json__JSONSchema="..\TypeDef\SensorTypeDef.json" Sensors_4SensorInformation_1json__JSONSchema="TypeDef\sensorInformationTypeDef.json" />
+      <UserProperties Sensors_4SensorInformation_1json__JSONSchema="TypeDef\sensorInformationTypeDef.json" Sensors_4Data2016_4Sensor_1json__JSONSchema="..\TypeDef\SensorTypeDef.json" Sensors_4Data2016_4SensorInfo_1json__JSONSchema="..\TypeDef\sensorInfoTypeDef.json" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
