--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -30,6 +30,9 @@
     <Content Include="Grid\index.html" />
     <Content Include="Grid\grid-style.css" />
     <Content Include="Grid\grid.css" />
+    <Content Include="icons\close.svg" />
+    <Content Include="icons\max.svg" />
+    <Content Include="icons\min.svg" />
     <Content Include="steeringWheel.png" />
     <Content Include="index.html" />
     <Content Include="IonLogo.png" />
