--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -60,7 +60,8 @@
     <TypeScriptCompile Include="comsys.ts" />
     <TypeScriptCompile Include="Controllers\BarController.ts" />
     <TypeScriptCompile Include="Controllers\Controller.ts" />
-    <TypeScriptCompile Include="Controllers\DSBController.ts" />
+    <TypeScriptCompile Include="Controllers\DataSourceAssignmentController.ts" />
+    <TypeScriptCompile Include="Controllers\DataSourceBuildController.ts" />
     <TypeScriptCompile Include="Controllers\SteeringWheelController.ts" />
     <TypeScriptCompile Include="event.ts" />
     <TypeScriptCompile Include="Controllers\GPSController.ts" />
