Sorted a little more and added support for test code

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Ion.Web.AnalyserDesktop.csproj
@@ -78,6 +78,7 @@
     <TypeScriptCompile Include="OSComponents\TaskBar.ts" />
     <TypeScriptCompile Include="Systems\AppWindow.ts" />
     <TypeScriptCompile Include="Systems\winsys.ts" />
+    <TypeScriptCompile Include="testground.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
