Moved some code around

--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Ion.Pro.Analyser.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ComBus.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SocketController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Data\SensorDataReader.cs" />
     <Compile Include="NRF\NRFWrapper.cs" />
@@ -58,7 +59,7 @@
     <Compile Include="SenSys\Models.cs" />
     <Compile Include="SenSys\SensorDataStore.cs" />
     <Compile Include="Web\SessionService.cs" />
-    <Compile Include="Web\Socket.cs" />
+    <Compile Include="Web\WebSocket.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -106,7 +107,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties Sensors_4Data2016_4SensorInfo_1json__JSONSchema="..\TypeDef\sensorInfoTypeDef.json" Sensors_4Data2016_4Sensor_1json__JSONSchema="..\TypeDef\SensorTypeDef.json" Sensors_4SensorInformation_1json__JSONSchema="TypeDef\sensorInformationTypeDef.json" Sensors_4Data2017_4SensorInfo_1json__JSONSchema="..\TypeDef\sensorInfoTypeDef.json" />
+      <UserProperties Sensors_4Data2017_4SensorInfo_1json__JSONSchema="..\TypeDef\sensorInfoTypeDef.json" Sensors_4SensorInformation_1json__JSONSchema="TypeDef\sensorInformationTypeDef.json" Sensors_4Data2016_4Sensor_1json__JSONSchema="..\TypeDef\SensorTypeDef.json" Sensors_4Data2016_4SensorInfo_1json__JSONSchema="..\TypeDef\sensorInfoTypeDef.json" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
